clusters/prod.colorful-pandas.com/security-compiled/v1.Service-cert-manager-webhook.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: webhook
    app.kubernetes.io/component: webhook
    app.kubernetes.io/instance: cert-manager
    app.kubernetes.io/managed-by: Helmraiser
    app.kubernetes.io/name: webhook
    app.kubernetes.io/version: v1.12.0
    helm.sh/chart: cert-manager-v1.12.0
    tanka.dev/environment: c7987b707994ad88ed8d378aa0f1422c53b90d25c85f274e
  name: cert-manager-webhook
  namespace: security
spec:
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: https
  selector:
    app.kubernetes.io/component: webhook
    app.kubernetes.io/instance: cert-manager
    app.kubernetes.io/name: webhook
  type: ClusterIP
