clusters/prod.colorful-pandas.com/security-compiled/v1.Service-cert-manager.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cert-manager
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: cert-manager
    app.kubernetes.io/managed-by: Helmraiser
    app.kubernetes.io/name: cert-manager
    app.kubernetes.io/version: v1.12.0
    helm.sh/chart: cert-manager-v1.12.0
    tanka.dev/environment: c7987b707994ad88ed8d378aa0f1422c53b90d25c85f274e
  name: cert-manager
  namespace: security
spec:
  ports:
  - name: tcp-prometheus-servicemonitor
    port: 9402
    protocol: TCP
    targetPort: 9402
  selector:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: cert-manager
    app.kubernetes.io/name: cert-manager
  type: ClusterIP
